--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
       <div
         id="groupBtn"
-        class="hidden w-full justify-center d-flex items-center"
+        class="hidden w-full justify-center d-flex items-center gap-2"
       >
         <button
           id="captureBtn"
