--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
             required
           />
           <input
+            id="asal-sekolah"
+            type="text"
+            placeholder="Dari sekolah mana?"
+            class="mb-3 w-full border rounded-xl px-4 py-2"
+            required
+          />
+          <input
             id="age"
             type="number"
             placeholder="Umur lo?"
@@ -76,6 +83,7 @@
           <h2 class="text-2xl font-bold mb-2 text-center">Hasil Tes Lo:</h2>
           <div class="text-gray-700 text-base mb-4">
             <p><strong>Nama:</strong> <span id="r-name"></span></p>
+            <p><strong>Asal Sekolah:</strong> <span id="r-sekolah"></span></p>
             <p><strong>Umur:</strong> <span id="r-age"></span></p>
             <p><strong>Hobi:</strong> <span id="r-hobby"></span></p>
             <p><strong>Zodiak:</strong> <span id="r-zodiac"></span></p>
@@ -100,7 +108,7 @@
         </button>
         <button
           id="reloadBtn"
-          class="bg-indigo-500 text-white px-6 py-2 rounded-xl hover:bg-indigo-600"
+          class="bg-indigo-500 text-white px-6 py-2 rounded-xl hover:bg-indigo-600 mt-2"
         >
           Kerjain Ulang
         </button>
