--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Seberapa Informatika Lo?</title>
     <script src="https://cdn.tailwindcss.com"></script>
+
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
       rel="stylesheet"
     />
+    <link rel="web icon" href="informatika.png" />
   </head>
 
   <body
     class="bg-gray-100 flex flex-wrap items-center justify-center min-h-screen px-4 py-0"
   >
-    <div class="w-full justify-start items-start mt-0">
+    <div class="w-full flex justify-between items-start mt-0">
       <img src="logo-uim.png" alt="Logo" class="w-40" />
+      <img src="informatika.png" alt="Logo" class="w-20" />
     </div>
 
     <div
