--- a/index.html
+++ b/index.html
@@ -12,11 +12,262 @@
       rel="stylesheet"
     />
     <link rel="web icon" href="informatika.png" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body
     class="bg-gray-100 flex flex-wrap items-center justify-center min-h-screen px-4 py-0"
   >
+    <!-- Bokeh Bulat -->
+    <div class="bokeh-bg">
+      <span
+        style="
+          left: 10%;
+          width: 80px;
+          height: 80px;
+          background: radial-gradient(
+            circle,
+            rgba(255, 0, 150, 0.8),
+            transparent
+          );
+          animation-duration: 18s;
+        "
+      ></span>
+      <span
+        style="
+          left: 25%;
+          width: 50px;
+          height: 50px;
+          background: radial-gradient(
+            circle,
+            rgba(0, 255, 200, 0.8),
+            transparent
+          );
+          animation-duration: 16s;
+        "
+      ></span>
+      <span
+        style="
+          left: 40%;
+          width: 100px;
+          height: 100px;
+          background: radial-gradient(
+            circle,
+            rgba(0, 120, 255, 0.8),
+            transparent
+          );
+          animation-duration: 20s;
+        "
+      ></span>
+      <span
+        style="
+          left: 60%;
+          width: 70px;
+          height: 70px;
+          background: radial-gradient(
+            circle,
+            rgba(255, 255, 100, 0.8),
+            transparent
+          );
+          animation-duration: 22s;
+        "
+      ></span>
+      <span
+        style="
+          left: 80%;
+          width: 60px;
+          height: 60px;
+          background: radial-gradient(
+            circle,
+            rgba(255, 150, 0, 0.8),
+            transparent
+          );
+          animation-duration: 24s;
+        "
+      ></span>
+      <span
+        style="
+          left: 15%;
+          width: 30px;
+          height: 30px;
+          background: radial-gradient(
+            circle,
+            rgba(255, 255, 255, 0.7),
+            transparent
+          );
+          animation-duration: 19s;
+        "
+      ></span>
+      <span
+        style="
+          left: 50%;
+          width: 40px;
+          height: 40px;
+          background: radial-gradient(
+            circle,
+            rgba(200, 100, 255, 0.8),
+            transparent
+          );
+          animation-duration: 21s;
+        "
+      ></span>
+      <span
+        style="
+          left: 50%;
+          width: 40px;
+          height: 40px;
+          background: radial-gradient(
+            circle,
+            rgba(200, 100, 255, 0.8),
+            transparent
+          );
+          animation-duration: 21s;
+        "
+      ></span>
+      <span
+        style="
+          left: 50%;
+          width: 40px;
+          height: 40px;
+          background: radial-gradient(
+            circle,
+            rgba(200, 100, 255, 0.8),
+            transparent
+          );
+          animation-duration: 21s;
+        "
+      ></span>
+      <span
+        style="
+          left: 50%;
+          width: 40px;
+          height: 40px;
+          background: radial-gradient(
+            circle,
+            rgba(200, 100, 255, 0.8),
+            transparent
+          );
+          animation-duration: 21s;
+        "
+      ></span>
+      <span
+        style="
+          left: 50%;
+          width: 40px;
+          height: 40px;
+          background: radial-gradient(
+            circle,
+            rgba(200, 100, 255, 0.8),
+            transparent
+          );
+          animation-duration: 21s;
+        "
+      ></span>
+      <span
+        style="
+          left: 50%;
+          width: 40px;
+          height: 40px;
+          background: radial-gradient(
+            circle,
+            rgba(200, 100, 255, 0.8),
+            transparent
+          );
+          animation-duration: 21s;
+        "
+      ></span>
+      <span
+        style="
+          left: 50%;
+          width: 40px;
+          height: 40px;
+          background: radial-gradient(
+            circle,
+            rgba(200, 100, 255, 0.8),
+            transparent
+          );
+          animation-duration: 21s;
+        "
+      ></span>
+      <span
+        style="
+          left: 50%;
+          width: 40px;
+          height: 40px;
+          background: radial-gradient(
+            circle,
+            rgba(200, 100, 255, 0.8),
+            transparent
+          );
+          animation-duration: 21s;
+        "
+      ></span>
+      <span
+        style="
+          left: 75%;
+          width: 90px;
+          height: 90px;
+          background: radial-gradient(
+            circle,
+            rgba(100, 255, 255, 0.8),
+            transparent
+          );
+          animation-duration: 23s;
+        "
+      ></span>
+      <span
+        style="
+          left: 75%;
+          width: 90px;
+          height: 90px;
+          background: radial-gradient(
+            circle,
+            rgba(100, 255, 255, 0.8),
+            transparent
+          );
+          animation-duration: 23s;
+        "
+      ></span>
+      <span
+        style="
+          left: 75%;
+          width: 90px;
+          height: 90px;
+          background: radial-gradient(
+            circle,
+            rgba(100, 255, 255, 0.8),
+            transparent
+          );
+          animation-duration: 23s;
+        "
+      ></span>
+      <span
+        style="
+          left: 75%;
+          width: 90px;
+          height: 90px;
+          background: radial-gradient(
+            circle,
+            rgba(100, 255, 255, 0.8),
+            transparent
+          );
+          animation-duration: 23s;
+        "
+      ></span>
+      <span
+        style="
+          left: 75%;
+          width: 90px;
+          height: 90px;
+          background: radial-gradient(
+            circle,
+            rgba(100, 255, 255, 0.8),
+            transparent
+          );
+          animation-duration: 23s;
+        "
+      ></span>
+    </div>
     <div class="w-full flex justify-between items-start mt-0">
       <img src="logo-uim.png" alt="Logo" class="w-40" />
       <img src="informatika.png" alt="Logo" class="w-20" />
